Kaggle Notebook | Image-to-Image-Style-Transfer | Version 5

--- a/image-to-image-style-transfer.ipynb
+++ b/image-to-image-style-transfer.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8d7413bd",
+   "id": "6fb1445d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:18:43.837928Z",
-     "iopub.status.busy": "2023-04-06T04:18:43.837149Z",
-     "iopub.status.idle": "2023-04-06T04:18:50.558696Z",
-     "shell.execute_reply": "2023-04-06T04:18:50.557546Z"
+     "iopub.execute_input": "2023-04-06T04:38:13.826563Z",
+     "iopub.status.busy": "2023-04-06T04:38:13.826157Z",
+     "iopub.status.idle": "2023-04-06T04:38:20.970314Z",
+     "shell.execute_reply": "2023-04-06T04:38:20.969165Z"
     },
     "papermill": {
-     "duration": 6.728995,
-     "end_time": "2023-04-06T04:18:50.561374",
+     "duration": 7.151699,
+     "end_time": "2023-04-06T04:38:20.973273",
      "exception": false,
-     "start_time": "2023-04-06T04:18:43.832379",
+     "start_time": "2023-04-06T04:38:13.821574",
      "status": "completed"
     },
     "tags": []
@@ -41,21 +41,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9f82755c",
+   "id": "edd02304",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:18:50.567861Z",
-     "iopub.status.busy": "2023-04-06T04:18:50.567231Z",
-     "iopub.status.idle": "2023-04-06T04:18:52.551889Z",
-     "shell.execute_reply": "2023-04-06T04:18:52.550424Z"
+     "iopub.execute_input": "2023-04-06T04:38:20.979965Z",
+     "iopub.status.busy": "2023-04-06T04:38:20.979337Z",
+     "iopub.status.idle": "2023-04-06T04:38:21.877347Z",
+     "shell.execute_reply": "2023-04-06T04:38:21.875234Z"
     },
     "papermill": {
-     "duration": 1.990371,
-     "end_time": "2023-04-06T04:18:52.554220",
+     "duration": 0.903839,
+     "end_time": "2023-04-06T04:38:21.879677",
      "exception": false,
-     "start_time": "2023-04-06T04:18:50.563849",
+     "start_time": "2023-04-06T04:38:20.975838",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "64bf723d",
+   "id": "3a71835c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:18:52.561034Z",
-     "iopub.status.busy": "2023-04-06T04:18:52.560035Z",
-     "iopub.status.idle": "2023-04-06T04:18:52.839796Z",
-     "shell.execute_reply": "2023-04-06T04:18:52.838924Z"
+     "iopub.execute_input": "2023-04-06T04:38:21.887055Z",
+     "iopub.status.busy": "2023-04-06T04:38:21.885988Z",
+     "iopub.status.idle": "2023-04-06T04:38:22.165719Z",
+     "shell.execute_reply": "2023-04-06T04:38:22.164733Z"
     },
     "papermill": {
-     "duration": 0.287428,
-     "end_time": "2023-04-06T04:18:52.844167",
+     "duration": 0.287688,
+     "end_time": "2023-04-06T04:38:22.170061",
      "exception": false,
-     "start_time": "2023-04-06T04:18:52.556739",
+     "start_time": "2023-04-06T04:38:21.882373",
      "status": "completed"
     },
     "tags": []
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8566864c",
+   "id": "db5fa59c",
    "metadata": {
     "papermill": {
-     "duration": 0.004388,
-     "end_time": "2023-04-06T04:18:52.853142",
+     "duration": 0.004646,
+     "end_time": "2023-04-06T04:38:22.179526",
      "exception": false,
-     "start_time": "2023-04-06T04:18:52.848754",
+     "start_time": "2023-04-06T04:38:22.174880",
      "status": "completed"
     },
     "tags": []
@@ -189,20 +189,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1af34298",
+   "id": "5db811db",
    "metadata": {
     "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:18:52.863197Z",
-     "iopub.status.busy": "2023-04-06T04:18:52.862910Z",
-     "iopub.status.idle": "2023-04-06T04:19:07.234015Z",
-     "shell.execute_reply": "2023-04-06T04:19:07.232617Z"
+     "iopub.execute_input": "2023-04-06T04:38:22.190493Z",
+     "iopub.status.busy": "2023-04-06T04:38:22.190201Z",
+     "iopub.status.idle": "2023-04-06T04:38:35.074378Z",
+     "shell.execute_reply": "2023-04-06T04:38:35.072994Z"
     },
     "papermill": {
-     "duration": 14.37877,
-     "end_time": "2023-04-06T04:19:07.236344",
+     "duration": 12.892734,
+     "end_time": "2023-04-06T04:38:35.077076",
      "exception": false,
-     "start_time": "2023-04-06T04:18:52.857574",
+     "start_time": "2023-04-06T04:38:22.184342",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://www.github.com/keras-team/keras-contrib.git\r\n",
-      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-94uchpvy\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-94uchpvy\r\n",
+      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-pwpxwdld\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-pwpxwdld\r\n",
       "  warning: redirecting to https://github.com/keras-team/keras-contrib.git/\r\n",
       "  Resolved https://www.github.com/keras-team/keras-contrib.git to commit 3fc5ef709e061416f4bc8a92ca3750c824b5d2b0\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
       "\u001b[?25hRequirement already satisfied: keras in /opt/conda/lib/python3.7/site-packages (from keras-contrib==2.0.8) (2.11.0)\r\n",
       "Building wheels for collected packages: keras-contrib\r\n",
       "  Building wheel for keras-contrib (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=843d6534bf84e380b1a4f61aee196ff85d314feea8995ddc61907b6ee300f684\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-6a67auk_/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
+      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=f13f6b7cd4b83d9d9126685539dd8f53683e800b0cf34dfe119779143722ca2b\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-p5kpdqze/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
       "Successfully built keras-contrib\r\n",
       "Installing collected packages: keras-contrib\r\n",
       "Successfully installed keras-contrib-2.0.8\r\n",
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5478b715",
+   "id": "7048e273",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:19:07.248394Z",
-     "iopub.status.busy": "2023-04-06T04:19:07.248085Z",
-     "iopub.status.idle": "2023-04-06T04:19:07.280680Z",
-     "shell.execute_reply": "2023-04-06T04:19:07.279774Z"
+     "iopub.execute_input": "2023-04-06T04:38:35.094987Z",
+     "iopub.status.busy": "2023-04-06T04:38:35.094558Z",
+     "iopub.status.idle": "2023-04-06T04:38:35.133643Z",
+     "shell.execute_reply": "2023-04-06T04:38:35.132618Z"
     },
     "papermill": {
-     "duration": 0.041245,
-     "end_time": "2023-04-06T04:19:07.282959",
+     "duration": 0.050851,
+     "end_time": "2023-04-06T04:38:35.136125",
      "exception": false,
-     "start_time": "2023-04-06T04:19:07.241714",
+     "start_time": "2023-04-06T04:38:35.085274",
      "status": "completed"
     },
     "tags": []
@@ -260,26 +260,84 @@
     "from keras_contrib.layers.normalization.instancenormalization import InstanceNormalization\n",
     "# define layer\n",
     "layer = InstanceNormalization(axis=-1)\n",
-    "#axis = -1 to ensure that features are normalized per feature map\n",
-    "\n"
+    "#axis = -1 to ensure that features are normalized per feature map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9435188",
+   "metadata": {
+    "papermill": {
+     "duration": 0.007541,
+     "end_time": "2023-04-06T04:38:35.151509",
+     "exception": false,
+     "start_time": "2023-04-06T04:38:35.143968",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### This function implements the 70X70 patchGAN discriminator model. \n",
+    "The model takes 256X256 sized image as input and outputs a patch of perdictions.\n",
+    "the model is optimized using least square loss (implemented as mean squared error), and a weighting is used so that the updates if the model have half (0.5)\n",
+    "the usual effect.(this was reccomended by the authors of the paper to slow down the changes to the discriminator relative to the generator \n",
+    "                 model during training)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5d18d15f",
+   "execution_count": 6,
+   "id": "36623772",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-06T04:38:35.167066Z",
+     "iopub.status.busy": "2023-04-06T04:38:35.166254Z",
+     "iopub.status.idle": "2023-04-06T04:38:35.180857Z",
+     "shell.execute_reply": "2023-04-06T04:38:35.179941Z"
+    },
     "papermill": {
-     "duration": 0.005027,
-     "end_time": "2023-04-06T04:19:07.293305",
+     "duration": 0.025022,
+     "end_time": "2023-04-06T04:38:35.183170",
      "exception": false,
-     "start_time": "2023-04-06T04:19:07.288278",
+     "start_time": "2023-04-06T04:38:35.158148",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def define_discriminator(image_shape):\n",
+    "    #weight initialization\n",
+    "    init = RandomNormal(stddev=0.02)\n",
+    "    #source image input\n",
+    "    in_image = Input(shape=image_shape)\n",
+    "    #64\n",
+    "    d = Conv2D(64,(4,4),strides=(2,2),padding='same',kernel_initializer=init)(in_image)\n",
+    "    d = LeakyReLU(alpha=0.2)(d)\n",
+    "    #128\n",
+    "    d = Conv2D(128,(4,4),strides=(2,2),padding='same',kernel_initializer=init)(d)\n",
+    "    d = InstanceNormalization(axis=-1)(d)\n",
+    "    d = LeakyReLU(alpha=0.2)(d)\n",
+    "    #256\n",
+    "    d = Conv2D(256,(4,4),strides=(2,2),padding='same',kernel_initalizer=init)(d)\n",
+    "    d = InstanceNormalization(axis=-1)(d)\n",
+    "    d = LeakyRelu(alpha=0.2)(d)\n",
+    "    #512\n",
+    "    d = Conv2D(512,(4,4),strides=(2,2),padding='same',kernel_initializer=init)(d)\n",
+    "    d =InstanceNormalization(axis=-1)(d)\n",
+    "    d = LeakyRelu(alpha=0.2)(d)\n",
+    "    #prefinal output layer\n",
+    "    d = Conv2D(512,(4,4),padding='same',kernel_initializer=init)(d)\n",
+    "    d = InstanceNormalization(axis=-1)(d)\n",
+    "    d = LeakyRelu(alpha=0.2)(d)\n",
+    "    #patch output\n",
+    "    patch_out = Conv2D(1,(4,4),padding='same',kernel_initializer=init)(d)\n",
+    "    #definig the model\n",
+    "    model = Model(in_image,patch_out)\n",
+    "    #compiling the model\n",
+    "    model.compile(loss = 'mse',optimizer = Adam(lr=0.0002,beta_1=0.5),loss_weights=[0.5])\n",
+    "    return model"
+   ]
   }
  ],
  "metadata": {
@@ -302,14 +360,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 35.668726,
-   "end_time": "2023-04-06T04:19:10.781208",
+   "duration": 33.743756,
+   "end_time": "2023-04-06T04:38:38.557410",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-06T04:18:35.112482",
+   "start_time": "2023-04-06T04:38:04.813654",
    "version": "2.4.0"
   }
  },
