Kaggle Notebook | Image-to-Image-Style-Transfer | Version 6

--- a/image-to-image-style-transfer.ipynb
+++ b/image-to-image-style-transfer.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6fb1445d",
+   "id": "26630cf2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:38:13.826563Z",
-     "iopub.status.busy": "2023-04-06T04:38:13.826157Z",
-     "iopub.status.idle": "2023-04-06T04:38:20.970314Z",
-     "shell.execute_reply": "2023-04-06T04:38:20.969165Z"
+     "iopub.execute_input": "2023-04-06T04:47:46.684179Z",
+     "iopub.status.busy": "2023-04-06T04:47:46.683269Z",
+     "iopub.status.idle": "2023-04-06T04:47:53.608026Z",
+     "shell.execute_reply": "2023-04-06T04:47:53.606930Z"
     },
     "papermill": {
-     "duration": 7.151699,
-     "end_time": "2023-04-06T04:38:20.973273",
+     "duration": 6.932318,
+     "end_time": "2023-04-06T04:47:53.610742",
      "exception": false,
-     "start_time": "2023-04-06T04:38:13.821574",
+     "start_time": "2023-04-06T04:47:46.678424",
      "status": "completed"
     },
     "tags": []
@@ -41,21 +41,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "edd02304",
+   "id": "a3ffa9db",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:38:20.979965Z",
-     "iopub.status.busy": "2023-04-06T04:38:20.979337Z",
-     "iopub.status.idle": "2023-04-06T04:38:21.877347Z",
-     "shell.execute_reply": "2023-04-06T04:38:21.875234Z"
+     "iopub.execute_input": "2023-04-06T04:47:53.618389Z",
+     "iopub.status.busy": "2023-04-06T04:47:53.617784Z",
+     "iopub.status.idle": "2023-04-06T04:47:54.261647Z",
+     "shell.execute_reply": "2023-04-06T04:47:54.260660Z"
     },
     "papermill": {
-     "duration": 0.903839,
-     "end_time": "2023-04-06T04:38:21.879677",
+     "duration": 0.65021,
+     "end_time": "2023-04-06T04:47:54.264033",
      "exception": false,
-     "start_time": "2023-04-06T04:38:20.975838",
+     "start_time": "2023-04-06T04:47:53.613823",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3a71835c",
+   "id": "2875413a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:38:21.887055Z",
-     "iopub.status.busy": "2023-04-06T04:38:21.885988Z",
-     "iopub.status.idle": "2023-04-06T04:38:22.165719Z",
-     "shell.execute_reply": "2023-04-06T04:38:22.164733Z"
+     "iopub.execute_input": "2023-04-06T04:47:54.271561Z",
+     "iopub.status.busy": "2023-04-06T04:47:54.271265Z",
+     "iopub.status.idle": "2023-04-06T04:47:54.540080Z",
+     "shell.execute_reply": "2023-04-06T04:47:54.539122Z"
     },
     "papermill": {
-     "duration": 0.287688,
-     "end_time": "2023-04-06T04:38:22.170061",
+     "duration": 0.277384,
+     "end_time": "2023-04-06T04:47:54.544579",
      "exception": false,
-     "start_time": "2023-04-06T04:38:21.882373",
+     "start_time": "2023-04-06T04:47:54.267195",
      "status": "completed"
     },
     "tags": []
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db5fa59c",
+   "id": "7382647f",
    "metadata": {
     "papermill": {
-     "duration": 0.004646,
-     "end_time": "2023-04-06T04:38:22.179526",
+     "duration": 0.005128,
+     "end_time": "2023-04-06T04:47:54.555098",
      "exception": false,
-     "start_time": "2023-04-06T04:38:22.174880",
+     "start_time": "2023-04-06T04:47:54.549970",
      "status": "completed"
     },
     "tags": []
@@ -189,20 +189,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5db811db",
+   "id": "fd2a3be1",
    "metadata": {
     "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:38:22.190493Z",
-     "iopub.status.busy": "2023-04-06T04:38:22.190201Z",
-     "iopub.status.idle": "2023-04-06T04:38:35.074378Z",
-     "shell.execute_reply": "2023-04-06T04:38:35.072994Z"
+     "iopub.execute_input": "2023-04-06T04:47:54.567307Z",
+     "iopub.status.busy": "2023-04-06T04:47:54.566922Z",
+     "iopub.status.idle": "2023-04-06T04:48:07.719213Z",
+     "shell.execute_reply": "2023-04-06T04:48:07.717728Z"
     },
     "papermill": {
-     "duration": 12.892734,
-     "end_time": "2023-04-06T04:38:35.077076",
+     "duration": 13.161345,
+     "end_time": "2023-04-06T04:48:07.721707",
      "exception": false,
-     "start_time": "2023-04-06T04:38:22.184342",
+     "start_time": "2023-04-06T04:47:54.560362",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://www.github.com/keras-team/keras-contrib.git\r\n",
-      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-pwpxwdld\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-pwpxwdld\r\n",
+      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-15rw11gn\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-15rw11gn\r\n",
       "  warning: redirecting to https://github.com/keras-team/keras-contrib.git/\r\n",
       "  Resolved https://www.github.com/keras-team/keras-contrib.git to commit 3fc5ef709e061416f4bc8a92ca3750c824b5d2b0\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
       "\u001b[?25hRequirement already satisfied: keras in /opt/conda/lib/python3.7/site-packages (from keras-contrib==2.0.8) (2.11.0)\r\n",
       "Building wheels for collected packages: keras-contrib\r\n",
       "  Building wheel for keras-contrib (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=f13f6b7cd4b83d9d9126685539dd8f53683e800b0cf34dfe119779143722ca2b\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-p5kpdqze/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
+      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=10bdc1cfde695a0af42be673c52b364b500a85f0e4f050f6be3e0593bc9a9e13\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-0f3ts8c0/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
       "Successfully built keras-contrib\r\n",
       "Installing collected packages: keras-contrib\r\n",
       "Successfully installed keras-contrib-2.0.8\r\n",
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7048e273",
+   "id": "45ad4cea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:38:35.094987Z",
-     "iopub.status.busy": "2023-04-06T04:38:35.094558Z",
-     "iopub.status.idle": "2023-04-06T04:38:35.133643Z",
-     "shell.execute_reply": "2023-04-06T04:38:35.132618Z"
+     "iopub.execute_input": "2023-04-06T04:48:07.735660Z",
+     "iopub.status.busy": "2023-04-06T04:48:07.734660Z",
+     "iopub.status.idle": "2023-04-06T04:48:07.767569Z",
+     "shell.execute_reply": "2023-04-06T04:48:07.766659Z"
     },
     "papermill": {
-     "duration": 0.050851,
-     "end_time": "2023-04-06T04:38:35.136125",
+     "duration": 0.042113,
+     "end_time": "2023-04-06T04:48:07.769807",
      "exception": false,
-     "start_time": "2023-04-06T04:38:35.085274",
+     "start_time": "2023-04-06T04:48:07.727694",
      "status": "completed"
     },
     "tags": []
@@ -265,13 +265,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9435188",
+   "id": "4883db91",
    "metadata": {
     "papermill": {
-     "duration": 0.007541,
-     "end_time": "2023-04-06T04:38:35.151509",
+     "duration": 0.00537,
+     "end_time": "2023-04-06T04:48:07.780808",
      "exception": false,
-     "start_time": "2023-04-06T04:38:35.143968",
+     "start_time": "2023-04-06T04:48:07.775438",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Discriminator Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e8917d7",
+   "metadata": {
+    "papermill": {
+     "duration": 0.005462,
+     "end_time": "2023-04-06T04:48:07.791835",
+     "exception": false,
+     "start_time": "2023-04-06T04:48:07.786373",
      "status": "completed"
     },
     "tags": []
@@ -287,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "36623772",
+   "id": "d0725849",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:38:35.167066Z",
-     "iopub.status.busy": "2023-04-06T04:38:35.166254Z",
-     "iopub.status.idle": "2023-04-06T04:38:35.180857Z",
-     "shell.execute_reply": "2023-04-06T04:38:35.179941Z"
+     "iopub.execute_input": "2023-04-06T04:48:07.804415Z",
+     "iopub.status.busy": "2023-04-06T04:48:07.804106Z",
+     "iopub.status.idle": "2023-04-06T04:48:07.814084Z",
+     "shell.execute_reply": "2023-04-06T04:48:07.813193Z"
     },
     "papermill": {
-     "duration": 0.025022,
-     "end_time": "2023-04-06T04:38:35.183170",
+     "duration": 0.018735,
+     "end_time": "2023-04-06T04:48:07.816246",
      "exception": false,
-     "start_time": "2023-04-06T04:38:35.158148",
+     "start_time": "2023-04-06T04:48:07.797511",
      "status": "completed"
     },
     "tags": []
@@ -338,6 +355,84 @@
     "    model.compile(loss = 'mse',optimizer = Adam(lr=0.0002,beta_1=0.5),loss_weights=[0.5])\n",
     "    return model"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c07b4e6",
+   "metadata": {
+    "papermill": {
+     "duration": 0.005433,
+     "end_time": "2023-04-06T04:48:07.827230",
+     "exception": false,
+     "start_time": "2023-04-06T04:48:07.821797",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Generator Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b828429e",
+   "metadata": {
+    "papermill": {
+     "duration": 0.005489,
+     "end_time": "2023-04-06T04:48:07.838414",
+     "exception": false,
+     "start_time": "2023-04-06T04:48:07.832925",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "* The generator is a encoder-decoder model architecture.\n",
+    "* The model takes a source image and generates a target image.\n",
+    "* It is done first by *downsampling(encoding)* the input down to a bottleneck layer, then interpreting the encoding with a number of ResNet layers that use the skip connections.\n",
+    "* This step is then followed by a series of layers that *upsample(decoding)* the representation to the size of the output image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "738cb5f2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-06T04:48:07.851337Z",
+     "iopub.status.busy": "2023-04-06T04:48:07.850505Z",
+     "iopub.status.idle": "2023-04-06T04:48:07.857515Z",
+     "shell.execute_reply": "2023-04-06T04:48:07.856444Z"
+    },
+    "papermill": {
+     "duration": 0.015481,
+     "end_time": "2023-04-06T04:48:07.859503",
+     "exception": false,
+     "start_time": "2023-04-06T04:48:07.844022",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'We first define the ResNet Blocks. These are blocks compromised of two 3X3 CNN layers where the input to the block is concatenated\\nto the output of the block, channel-wise.\\nThis function creates 2 Convulation-InstanceNorm blocks with 3X3 filter and 1X1 stride.\\nSame padding is used instead of refelction padded reccomended in the paper.\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''We first define the ResNet Blocks. These are blocks compromised of two 3X3 CNN layers where the input to the block is concatenated\n",
+    "to the output of the block, channel-wise.\n",
+    "This function creates 2 Convulation-InstanceNorm blocks with 3X3 filter and 1X1 stride.\n",
+    "Same padding is used instead of refelction padded reccomended in the paper.\n",
+    "'''\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -360,14 +455,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 33.743756,
-   "end_time": "2023-04-06T04:38:38.557410",
+   "duration": 32.750339,
+   "end_time": "2023-04-06T04:48:10.716113",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-06T04:38:04.813654",
+   "start_time": "2023-04-06T04:47:37.965774",
    "version": "2.4.0"
   }
  },
