Kaggle Notebook | Image-to-Image-Style-Transfer | Version 7

--- a/image-to-image-style-transfer.ipynb
+++ b/image-to-image-style-transfer.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26630cf2",
+   "id": "0fc81832",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:47:46.684179Z",
-     "iopub.status.busy": "2023-04-06T04:47:46.683269Z",
-     "iopub.status.idle": "2023-04-06T04:47:53.608026Z",
-     "shell.execute_reply": "2023-04-06T04:47:53.606930Z"
+     "iopub.execute_input": "2023-04-06T04:54:01.008090Z",
+     "iopub.status.busy": "2023-04-06T04:54:01.007208Z",
+     "iopub.status.idle": "2023-04-06T04:54:07.971084Z",
+     "shell.execute_reply": "2023-04-06T04:54:07.969715Z"
     },
     "papermill": {
-     "duration": 6.932318,
-     "end_time": "2023-04-06T04:47:53.610742",
+     "duration": 6.973041,
+     "end_time": "2023-04-06T04:54:07.974517",
      "exception": false,
-     "start_time": "2023-04-06T04:47:46.678424",
+     "start_time": "2023-04-06T04:54:01.001476",
      "status": "completed"
     },
     "tags": []
@@ -41,21 +41,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3ffa9db",
+   "id": "e13ac835",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:47:53.618389Z",
-     "iopub.status.busy": "2023-04-06T04:47:53.617784Z",
-     "iopub.status.idle": "2023-04-06T04:47:54.261647Z",
-     "shell.execute_reply": "2023-04-06T04:47:54.260660Z"
+     "iopub.execute_input": "2023-04-06T04:54:07.983361Z",
+     "iopub.status.busy": "2023-04-06T04:54:07.982627Z",
+     "iopub.status.idle": "2023-04-06T04:54:08.971157Z",
+     "shell.execute_reply": "2023-04-06T04:54:08.970132Z"
     },
     "papermill": {
-     "duration": 0.65021,
-     "end_time": "2023-04-06T04:47:54.264033",
+     "duration": 0.995199,
+     "end_time": "2023-04-06T04:54:08.973395",
      "exception": false,
-     "start_time": "2023-04-06T04:47:53.613823",
+     "start_time": "2023-04-06T04:54:07.978196",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2875413a",
+   "id": "6c1cf87e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:47:54.271561Z",
-     "iopub.status.busy": "2023-04-06T04:47:54.271265Z",
-     "iopub.status.idle": "2023-04-06T04:47:54.540080Z",
-     "shell.execute_reply": "2023-04-06T04:47:54.539122Z"
+     "iopub.execute_input": "2023-04-06T04:54:08.982222Z",
+     "iopub.status.busy": "2023-04-06T04:54:08.980648Z",
+     "iopub.status.idle": "2023-04-06T04:54:09.298729Z",
+     "shell.execute_reply": "2023-04-06T04:54:09.297654Z"
     },
     "papermill": {
-     "duration": 0.277384,
-     "end_time": "2023-04-06T04:47:54.544579",
+     "duration": 0.326954,
+     "end_time": "2023-04-06T04:54:09.303624",
      "exception": false,
-     "start_time": "2023-04-06T04:47:54.267195",
+     "start_time": "2023-04-06T04:54:08.976670",
      "status": "completed"
     },
     "tags": []
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7382647f",
+   "id": "f04c5b2d",
    "metadata": {
     "papermill": {
-     "duration": 0.005128,
-     "end_time": "2023-04-06T04:47:54.555098",
+     "duration": 0.005679,
+     "end_time": "2023-04-06T04:54:09.315683",
      "exception": false,
-     "start_time": "2023-04-06T04:47:54.549970",
+     "start_time": "2023-04-06T04:54:09.310004",
      "status": "completed"
     },
     "tags": []
@@ -189,20 +189,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd2a3be1",
+   "id": "db5cec3f",
    "metadata": {
     "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:47:54.567307Z",
-     "iopub.status.busy": "2023-04-06T04:47:54.566922Z",
-     "iopub.status.idle": "2023-04-06T04:48:07.719213Z",
-     "shell.execute_reply": "2023-04-06T04:48:07.717728Z"
+     "iopub.execute_input": "2023-04-06T04:54:09.328622Z",
+     "iopub.status.busy": "2023-04-06T04:54:09.328288Z",
+     "iopub.status.idle": "2023-04-06T04:54:22.139378Z",
+     "shell.execute_reply": "2023-04-06T04:54:22.137774Z"
     },
     "papermill": {
-     "duration": 13.161345,
-     "end_time": "2023-04-06T04:48:07.721707",
+     "duration": 12.820276,
+     "end_time": "2023-04-06T04:54:22.141800",
      "exception": false,
-     "start_time": "2023-04-06T04:47:54.560362",
+     "start_time": "2023-04-06T04:54:09.321524",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://www.github.com/keras-team/keras-contrib.git\r\n",
-      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-15rw11gn\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-15rw11gn\r\n",
+      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-bf2jm40o\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-bf2jm40o\r\n",
       "  warning: redirecting to https://github.com/keras-team/keras-contrib.git/\r\n",
       "  Resolved https://www.github.com/keras-team/keras-contrib.git to commit 3fc5ef709e061416f4bc8a92ca3750c824b5d2b0\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
       "\u001b[?25hRequirement already satisfied: keras in /opt/conda/lib/python3.7/site-packages (from keras-contrib==2.0.8) (2.11.0)\r\n",
       "Building wheels for collected packages: keras-contrib\r\n",
       "  Building wheel for keras-contrib (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=10bdc1cfde695a0af42be673c52b364b500a85f0e4f050f6be3e0593bc9a9e13\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-0f3ts8c0/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
+      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=861864067ae015b689864390f80fac2b80b3def3f16afcee25b1c54be2d0a4d9\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-ro0k6h_j/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
       "Successfully built keras-contrib\r\n",
       "Installing collected packages: keras-contrib\r\n",
       "Successfully installed keras-contrib-2.0.8\r\n",
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "45ad4cea",
+   "id": "bb88569c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:48:07.735660Z",
-     "iopub.status.busy": "2023-04-06T04:48:07.734660Z",
-     "iopub.status.idle": "2023-04-06T04:48:07.767569Z",
-     "shell.execute_reply": "2023-04-06T04:48:07.766659Z"
+     "iopub.execute_input": "2023-04-06T04:54:22.156039Z",
+     "iopub.status.busy": "2023-04-06T04:54:22.154906Z",
+     "iopub.status.idle": "2023-04-06T04:54:22.218244Z",
+     "shell.execute_reply": "2023-04-06T04:54:22.215995Z"
     },
     "papermill": {
-     "duration": 0.042113,
-     "end_time": "2023-04-06T04:48:07.769807",
+     "duration": 0.074361,
+     "end_time": "2023-04-06T04:54:22.222290",
      "exception": false,
-     "start_time": "2023-04-06T04:48:07.727694",
+     "start_time": "2023-04-06T04:54:22.147929",
      "status": "completed"
     },
     "tags": []
@@ -265,13 +265,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4883db91",
+   "id": "fb468159",
    "metadata": {
     "papermill": {
-     "duration": 0.00537,
-     "end_time": "2023-04-06T04:48:07.780808",
+     "duration": 0.008583,
+     "end_time": "2023-04-06T04:54:22.240778",
      "exception": false,
-     "start_time": "2023-04-06T04:48:07.775438",
+     "start_time": "2023-04-06T04:54:22.232195",
      "status": "completed"
     },
     "tags": []
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e8917d7",
+   "id": "b798e29c",
    "metadata": {
     "papermill": {
-     "duration": 0.005462,
-     "end_time": "2023-04-06T04:48:07.791835",
+     "duration": 0.019188,
+     "end_time": "2023-04-06T04:54:22.272762",
      "exception": false,
-     "start_time": "2023-04-06T04:48:07.786373",
+     "start_time": "2023-04-06T04:54:22.253574",
      "status": "completed"
     },
     "tags": []
@@ -304,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d0725849",
+   "id": "4a18e234",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:48:07.804415Z",
-     "iopub.status.busy": "2023-04-06T04:48:07.804106Z",
-     "iopub.status.idle": "2023-04-06T04:48:07.814084Z",
-     "shell.execute_reply": "2023-04-06T04:48:07.813193Z"
+     "iopub.execute_input": "2023-04-06T04:54:22.291541Z",
+     "iopub.status.busy": "2023-04-06T04:54:22.290879Z",
+     "iopub.status.idle": "2023-04-06T04:54:22.305422Z",
+     "shell.execute_reply": "2023-04-06T04:54:22.304477Z"
     },
     "papermill": {
-     "duration": 0.018735,
-     "end_time": "2023-04-06T04:48:07.816246",
+     "duration": 0.026375,
+     "end_time": "2023-04-06T04:54:22.308145",
      "exception": false,
-     "start_time": "2023-04-06T04:48:07.797511",
+     "start_time": "2023-04-06T04:54:22.281770",
      "status": "completed"
     },
     "tags": []
@@ -358,13 +358,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c07b4e6",
+   "id": "457b5596",
    "metadata": {
     "papermill": {
-     "duration": 0.005433,
-     "end_time": "2023-04-06T04:48:07.827230",
+     "duration": 0.010562,
+     "end_time": "2023-04-06T04:54:22.328011",
      "exception": false,
-     "start_time": "2023-04-06T04:48:07.821797",
+     "start_time": "2023-04-06T04:54:22.317449",
      "status": "completed"
     },
     "tags": []
@@ -375,13 +375,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b828429e",
+   "id": "cc26af25",
    "metadata": {
     "papermill": {
-     "duration": 0.005489,
-     "end_time": "2023-04-06T04:48:07.838414",
+     "duration": 0.006932,
+     "end_time": "2023-04-06T04:54:22.345000",
      "exception": false,
-     "start_time": "2023-04-06T04:48:07.832925",
+     "start_time": "2023-04-06T04:54:22.338068",
      "status": "completed"
     },
     "tags": []
@@ -396,42 +396,42 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "738cb5f2",
+   "id": "7dd05457",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:48:07.851337Z",
-     "iopub.status.busy": "2023-04-06T04:48:07.850505Z",
-     "iopub.status.idle": "2023-04-06T04:48:07.857515Z",
-     "shell.execute_reply": "2023-04-06T04:48:07.856444Z"
+     "iopub.execute_input": "2023-04-06T04:54:22.361958Z",
+     "iopub.status.busy": "2023-04-06T04:54:22.361626Z",
+     "iopub.status.idle": "2023-04-06T04:54:22.368653Z",
+     "shell.execute_reply": "2023-04-06T04:54:22.367471Z"
     },
     "papermill": {
-     "duration": 0.015481,
-     "end_time": "2023-04-06T04:48:07.859503",
+     "duration": 0.016455,
+     "end_time": "2023-04-06T04:54:22.371125",
      "exception": false,
-     "start_time": "2023-04-06T04:48:07.844022",
+     "start_time": "2023-04-06T04:54:22.354670",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'We first define the ResNet Blocks. These are blocks compromised of two 3X3 CNN layers where the input to the block is concatenated\\nto the output of the block, channel-wise.\\nThis function creates 2 Convulation-InstanceNorm blocks with 3X3 filter and 1X1 stride.\\nSame padding is used instead of refelction padded reccomended in the paper.\\n'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''We first define the ResNet Blocks. These are blocks compromised of two 3X3 CNN layers where the input to the block is concatenated\n",
     "to the output of the block, channel-wise.\n",
     "This function creates 2 Convulation-InstanceNorm blocks with 3X3 filter and 1X1 stride.\n",
     "Same padding is used instead of refelction padded reccomended in the paper.\n",
     "'''\n",
-    "\n"
+    "def resnet_block(n_filters,input_layer):\n",
+    "    init = RandomNormal(stddev=0.02)\n",
+    "    #1 convolution layer\n",
+    "    g = Conv2D(n_filters,(3,3),padding='same',kernel_initializer=init)(input_layer)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    g = Activation('relu')(g)\n",
+    "    #2 convolution layer\n",
+    "    g = Conv2D(n_filters,(3,3),padding='same',kernel_initializer=init)(input_layer)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    #concatenate merge channel-wise with the input layer\n",
+    "    g = Concatenate()([g,input_layer])\n",
+    "    return g\n"
    ]
   }
  ],
@@ -455,14 +455,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 32.750339,
-   "end_time": "2023-04-06T04:48:10.716113",
+   "duration": 33.792302,
+   "end_time": "2023-04-06T04:54:25.329025",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-06T04:47:37.965774",
+   "start_time": "2023-04-06T04:53:51.536723",
    "version": "2.4.0"
   }
  },
